objects/Risks__c.object
<CustomObject>
    <description>Proforce 11/2014</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Who owns this risk?</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Risk Description</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Impact_USD__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Estimated financial impact to the nearest thousand (in USD only)</inlineHelpText>
        <label>Financial Impact (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Impact_low_to_high__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Decide the risk impact from low to high, with 1 being &apos;very low&apos; to 5 being &apos;very high&apos;.</inlineHelpText>
        <label>Impact (very low to very high)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mitigation__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Mitigation</inlineHelpText>
        <label>Mitigation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Probability_low_to_high__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Decide the probability of the risk from low to high, with 1 being &quot;Very Low&quot; to 5 being &quot;Very High&quot;</inlineHelpText>
        <label>Probability (very low to very high)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>What will your response be?</inlineHelpText>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avoid</fullName>
                </value>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reduce</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>FallBack</fullName>
                </value>
                <value>
                    <fullName>Exploit</fullName>
                </value>
                <value>
                    <fullName>Enhance</fullName>
                </value>
                <value>
                    <fullName>Share</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <description>Proforce 10/2014</description>
        <inlineHelpText>Risk Category</inlineHelpText>
        <label>Risk Management Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Value__c</fullName>
        <description>Proforce 11/2014</description>
        <formula>VALUE( TEXT(Impact_low_to_high__c)) *  VALUE (TEXT(Probability_low_to_high__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>impact * probability</inlineHelpText>
        <label>Risk Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Case_Number__c</fullName>
        <description>Service Case Number</description>
        <inlineHelpText>Service Case Number</inlineHelpText>
        <label>Service Case Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>What is the risk status?</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Title</inlineHelpText>
        <label>Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Is visibility set for internal or external users (for future implementation).</inlineHelpText>
        <label>Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Risks</label>
    <nameField>
        <displayFormat>PR-{0000000000}</displayFormat>
        <label>Risks Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>